--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SITE_NAME_HEADER=Biblioteca do Davi
 SITE_MAIN_LANGUAGE=pt
-SITE_BASE_URL=meuobsidian.vercel.app
+SITE_BASE_URL=
 SHOW_CREATED_TIMESTAMP=true
 TIMESTAMP_FORMAT=dd MMM, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=true
